# wurzel

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DIRECT_REQUIREMENTS.txt  Dockerfile  Makefile  README.md  RELEASES.md  REUSE.toml  entrypoint.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml  question.yml
.github/scripts/: run-pipeline-tests.sh  verify-pipeline-output.sh
.github/workflows/: ci.yaml  create-docker-img.yml  deploy-docs.yml  lint.yaml  publish-to-pypi.yml  publish-to-testpypi.yml  release.yaml  reuse-compliance.yml  semantic_pr.yml  supabase-db-tests.yml  test-argo-e2e.yaml  test-docs.yml  test-sftp-e2e.yaml  test-supabase-e2e.yaml  test.yaml  web-e2e-playwright.yml  web-ui-tests.yml
.windsurf/rules/: wurzel-dev-rule.md
apps/web/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vitest.config.ts
backends/: index.html
backends/argoworkflows/: index.html
backends/dvc/: index.html
cli/: index.html
data/: german_stopwords_full.txt
datacontract/common/: index.html
developer-guide/: index.html
developer-guide/building-pipelines/: index.html
developer-guide/cli/: index.html
developer-guide/creating-steps/: index.html
developer-guide/data-contracts/: index.html
developer-guide/getting-started/: index.html
developer-guide/installation/: index.html
developer-guide/runtime_vs_generatetime/: index.html
developping/Building_your_one_step/: index.html
developping/define_pipline/: index.html
developping/docs/: index.html
developping/getting_started/: index.html
docs/: Building_your_one_step.md  Makefile  backends.md  conf.py  index.md  index.rst  installation.md  make.bat  middlewares.md
docs/backends/: argoworkflows.md  dvc.md  gitlab.md  index.md
docs/datacontract/: common.md
docs/developer-guide/: building-pipelines.md  cli.md  creating-steps.md  data-contracts.md  getting-started.md  index.md  installation.md  logs_scope.md  runtime_vs_generatetime.md
docs/developing/: Building_your_one_step.md  define_pipline.md  docs.md  getting_started.md
docs/developping/: Building_your_one_step.md  define_pipline.md  docs.md  getting_started.md  logs_scope.md
docs/executor/: index.md  middlewares.md
docs/step_executors/: prometheus_step_executor.md
docs/steps/: docling.md  duplication.md  embedding.md  manual_markdown.md  milvus.md  qdrant.md  scraperapi.md  sftp.md  splitter.md
examples/pipeline/: Dockerfile  README.md  docker-compose.yml  pipeline.py  pipeline.yaml  pipelinedemo.py  requirements.txt  values.yaml
executor/: index.html
executor/middlewares/: index.html
helm/: .helmignore  Chart.yaml  values.yaml
helm/templates/: configmap.yaml  cronjob.yaml  volume.yaml
installation/: index.html
scripts/: setup-dev.sh  sync_step_catalog.py
scripts/overlays/: docker-compose.healthcheck-override.yml
search/: search_index.json
static/stylesheets/: telekom-magenta.css
steps/docling/: index.html
steps/duplication/: index.html
steps/embedding/: index.html
steps/manual_markdown/: index.html
steps/milvus/: index.html
steps/qdrant/: index.html
steps/scraperapi/: index.html
steps/sftp/: index.html
steps/splitter/: index.html
supabase/: config.toml  seed.sql
supabase/migrations/: 20260407120000_kaas_core.sql  20260407120100_step_catalog_seed.sql  20260407120200_create_organization_rpc.sql  20260407120300_organization_members_select_self.sql  20260407120400_drop_organization_members_peers_recursion.sql  20260424000001_create_projects.sql  20260424000002_create_project_members.sql  20260424000003_create_branches.sql  20260424000004_create_branch_manifests.sql  20260504000005_project_packages.sql  20260508000006_create_branch_pipeline_runs.sql  20260528000007_branches_promotes_to_name.sql
supabase/temporal-bridge/: package-lock.json
supabase/tests/: kaas_rls.test.sql
tests/: conftest.py  drop_duplication_test.py  import_test.py  markdown_test.py  splitter_test.py  test_cli_helpers.py  test_cli_main_callbacks.py  test_doc_examples.py
tests/api/: conftest.py  test_app.py  test_backends_base.py  test_config.py  test_dependencies.py  test_errors.py  test_otel.py  test_package_manager_background.py  test_package_manager_db.py  test_package_manager_installer.py  test_package_manager_settings.py  test_route_settings.py
tests/backend/: conftest.py  test_backend_argo.py  test_backend_dvc.py  test_backend_edge_cases.py  test_backend_from_values.py  test_backend_gitlab.py  test_backend_integration.py  test_backend_run_id.py  test_backend_utils.py  test_values.py
tests/cli/: cmd_env_test.py  gen_cli_call_test.py  logging_test.py  main_test.py  middleware_cli_test.py  performance_test.py  test__main.py  test_ast_helpers.py  test_backend_and_middleware_autocomplete.py  test_cli_autocomplete_scan_functions.py  test_cli_callbacks_extra.py  test_cli_helpers.py  test_cli_main_callbacks.py  test_cmd_env.py  test_cmd_generate.py  test_cmd_manifest.py  test_cmd_middlewares.py  test_cmd_middlewares_and_logger.py  test_completion_command.py  test_display.py  test_logger.py  test_middlewares_commands.py  test_tab_completion.py
tests/core/: __init__.py  backend_test.py  invalid_test.py  path_test.py  run_test.py  self_consuming_step_test.py  settings_base_test.py  settings_library_test.py  simple_chaining_test.py  step_chain_test.py  step_creation_test.py  step_settings_test.py  step_test.py  traversal_test.py
tests/data/: .gitignore  HrMarkdown.json  duden_wurzel.html  embedded.csv  embedded_broken.csv  embedding_multi.csv  markdown.json  wikipedia_root.html  wikipedia_wurzel.html
tests/datacontract/: arrowframe_test.py  batch_writer_test.py  dataframe_model_test.py  md_test.py  streaming_save_test.py
tests/executors/: allows_extra_settings_test.py  basic_test.py  correlation_id_test.py  (+7 more)
wurzel/: __init__.py  __main__.py  exceptions.py
(+476 files in other folders)
