# SPDX-FileCopyrightText: 2024 Deutsche Telekom AG
#
# SPDX-License-Identifier: CC0-1.0
[project]
name = "wurzel"
version = "0.1.0"
description = ""
authors = [
    {name ="Thomas Weigel", email="thomas.weigel@telekom.de"},
    {name ="Paul Bauriegel", email="paul.bauriegel@telekom.de"},
    {name ="Maximilian Erren", email="maximilian.erren@telekom.de"}
]
readme = "README.md"
requires-python = ">= 3.11, < 3.13"

license = {file = "LICENSES/Apache-2.0.txt"}
classifiers = [
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Topic :: Internet',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Pre-processors',
    'Topic :: Software Development :: Version Control',
]
dependencies= [
    "tqdm==4.66.5",
    "pandas==2.2.2",
    "numpy < 2.0.0",
    "dvc==3.53.1",
    "Markdown==3.6",
    "pydantic-settings==2.5.2",
    "pydantic>=2.6.4, == 2.*",
    "asgi-correlation-id>=4.3.1, == 4.*",
    "langchain-core>=0.2.0",
    "prometheus-client==0.21.1",
    "mistletoe==1.4.0",
    "pandera==0.20.3",
    "mdformat==0.7.17",
    "spacy==3.7.5",
    "tiktoken==0.7.0",
    "joblib>=1.4.0"
]

[project.optional-dependencies]
qdrant = ["qdrant-client==1.10.1"]
milvus = [
    "pymilvus==2.4.4",
]
lint = [
    "pylint==3.3.4",
    "pylint-json2html==0.5.0",
    "pre-commit==4.1.*",
    "reuse==5.0.2",
    "ruff==0.9.10",
]
test = [
    "pytest==8.*",
    "pytest-asyncio==0.23.*",
    "pytest-cov==4.*",
    "pytest-html==4.*",
    "pytest_env==1.*",
    "pytest-xdist==3.*",
    "pytest-mock==3.*",
    "requests-mock==1.*",
    "milvus-lite==2.*", # used for miluvs mock
]


dev = ["wurzel[lint,test,qdrant,milvus]"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wurzel*"]
namespaces = false

[tool.mypy]
python_version = "3.11 | 3.12"
disable_error_code = ["import-untyped"]
[tool.pylint.'MESSAGES CONTROL']
max-line-length = 140
max-locals = 18
max-returns = 10
max-args = 10
min-public-methods = 0
disable = "W1203, C0114"
[tool.setuptools.dynamic]
version = {file = "VERSION"}
[project.scripts]
wurzel = "wurzel.cli._main:main"

[project.urls]
"Release notes" = "https://github.com/telekom/wurzel/releases/"
Source = "https://github.com/telekom/wurzel"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m pip install build; python -m build"
tag_format = "{version}"

[tool.semantic_release.commit_parser_options]
major_types = ["breaking"]
minor_types = ["feat"]
patch_types = ["fix", "perf"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "ref", "test"]
default_bump_level = 0

[tool.semantic_release.branches.main]
match = "(main)"
prerelease = false

[tool.semantic_release.branches.dev]
match = "^(feature|feat|fix|perf|ci)/.+"
prerelease = true
prerelease_token = "dev"
