# SPDX-FileCopyrightText: 2024 Deutsche Telekom AG
#
# SPDX-License-Identifier: CC0-1.0
[project]
name = "wurzel"

version = "2.4.0"

description = "Pick, choose and chain your RAG tools in a pythonic way"
authors = [
    {name ="Thomas Weigel", email="thomas.weigel@telekom.de"},
    {name ="Paul Bauriegel", email="paul.bauriegel@telekom.de"},
    {name ="Maximilian Erren", email="maximilian.erren@telekom.de"}
]
readme = "README.md"
requires-python = ">= 3.11, < 3.13"

license = {file = "LICENSES/Apache-2.0.txt"}
classifiers = [
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Topic :: Internet',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Pre-processors',
    'Topic :: Software Development :: Version Control',
]
dependencies= [
    "tqdm==4.67.1",
    "pandas==2.3.3",
    "numpy < 2.0.0",
    "dvc==3.63.0",
    "Markdown==3.6",
    "pydantic-settings==2.5.2",
    "pydantic>=2.6.4, == 2.*",
    "asgi-correlation-id>=4.3.1, == 4.*",
    "prometheus-client==0.23.1",
    "mistletoe==1.5.0",
    "pandera==0.20.3",
    "mdformat==0.7.22",
    "lxml>=5.2,<6.1",
    "pyyaml>=6.0.2",
    "pip<26",
]

[project.optional-dependencies]
qdrant = [
    "qdrant-client==1.15.1"
]
docling = [
    "docling==2.30.0"
]
milvus = [
    "pymilvus==2.6.3",
]
openai = [
    "tiktoken==0.12.0",
]
transformers = [
    "transformers",
]
# TLSH (Trend Micro Locality Sensitive Hash)
# Note: Official TLSH repo: https://github.com/trendmicro/tlsh
# - The latest release (4.12.0) requires installation from source, which fails.
# - https://pypi.org/project/python-tlsh/ is unmaintained; latest (4.5.0) does not work on Windows.
# - https://pypi.org/project/py-tlsh/ is also unmaintained; latest (4.7.2) works on win & mac & ubuntu.
tlsh = [
    "py-tlsh==4.7.2"
]

splitter = [
    "wurzel[wtpsplit]",
    "wurzel[transformers]",
    "wurzel[openai]",
    "spacy==3.7.5",
    "joblib>=1.4.0",
]
wtpsplit = [
    "wtpsplit>=2.1.6",
]
embedding = [
    "langchain-core>=0.2.0",
    "requests",
]
scraperapi = [
    "requests",
    "joblib>=1.4.0",
]
sftp = [
    "paramiko>=3.0.0",
]
argo = [
    "hera >=5.20.1",
]
lint = [
    "pylint[spelling]==3.3.7",
    "pylint-json2html==0.5.0",
    "pre-commit>=4.1,<4.6",
    "reuse==5.0.2",
    "ruff==0.14.4",
]
test = [
    "pytest==8.4.*",
    "pytest-asyncio==0.23.*",
    "pytest-cov>=4,<8",
    "pytest-html==4.*",
    "pytest_env==1.*",
    "pytest-xdist==3.*",
    "pytest-mock==3.*",
    "requests-mock==1.*",
    #"milvus-lite==2.*", # used for miluvs mock no support for windows https://github.com/milvus-io/milvus-lite/issues/176
]

docs = [
    "mkdocstrings[python]",
    "mkdocs-mermaid2-plugin",
    "mkdocs-typer2",
    "mkdocs-material>=9.4.0",
    "mkdocs-multirepo-plugin>=0.5.3",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.7.0",
    "pygments>=2.16.0",
]

all = ["wurzel[qdrant,milvus,tlsh,docling,argo,openai,splitter,embedding,scraperapi]"]
dev = ["wurzel[lint,test,all]"]

[build-system]
requires = ["setuptools>=78.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wurzel*"]
namespaces = false

[tool.setuptools.package-data]
wurzel = ["data/*", "utils/to_markdown/*"]



[tool.mypy]
python_version = "3.11 | 3.12"
disable_error_code = ["import-untyped"]
[tool.pylint.'MESSAGES CONTROL']
max-line-length = 140
max-locals = 18
max-returns = 10
max-args = 10
min-public-methods = 0
disable = "W1203, C0114"

[tool.pylint.MASTER]
# Skip every *.md file that lives anywhere under tests/data/
ignore-paths = [
  '^tests/data/.*\\.md$',   #  ^  repo‑relative path   .* any sub‑dirs   \.md file‑extension
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
[project.scripts]
wurzel = "wurzel.cli._main:main"

[project.urls]
"Release notes" = "https://github.com/telekom/wurzel/releases/"
Source = "https://github.com/telekom/wurzel"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m pip install build; python -m build"
tag_format = "{version}"

[tool.semantic_release.commit_parser_options]
major_types = ["breaking"]
minor_types = ["feat", "feature"]
patch_types = ["fix", "perf", "hotfix", "patch"]
allowed_tags = ["feat","feature", "fix", "hotfix", "perf", "patch", "build", "chore", "ci", "docs", "style", "refactor", "ref", "test"]
default_bump_level = 0

[tool.semantic_release.branches.main]
match = "(main)"
prerelease = false

[tool.semantic_release.branches.dev]
match = "^(?!main$).+"
prerelease = true
prerelease_token = "dev"


[tool.ruff]

target-version = "py39"
line-length = 140

[tool.ruff.lint]
select = [
    "F",  # pyflakes rules,
    "I",  # sorting for imports
    "E",  # formatting
    "D",  # formatting for docs (disabled)
    "UP", # upgrade to latest syntax if possible
    "C4", # cleaner comprehensions
    "T201", # bad function print
]

ignore = [
    "D401", # First line of docstring should be in imperative mood
    "D100",# Missing docstring in public module #TODO:
    "D104", # Missing docstring in public package #TODO:
    "D105", # Missing docstring in magic method #TODO:
    "D102",  #Missing docstring in public method #TODO:
    "D417", # Missing argument description in the docstring for `__init__`: `defaults` #TODO:
    "D107", # Missing docstring in `__init__` #TODO:
    "D103", # Missing docstring in public function #TODO:
    "D101",  #Missing docstring in public class #TODO:
    "D205", #1 blank line required between summary line and description
    "D211", # `incorrect-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible.
    "D213", #`multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible.
    "D203", #cause conflicts when used with the formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"
